Add site header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div id="site_header"></div>
+    <div id="site_header">
+        <h1>Boolando</h1>
+    </div>
     <!-- /#site_header -->
     <div id="site_main"></div>
     <!-- /#site_main -->
