Add site footer

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
         
     </main>
     <!-- /#site_main -->
-    <footer id="site_footer"></footer>
+    <footer id="site_footer">
+        <p>Made with <span>&hearts;</span> by Antonio Sabella</p>
+    </footer>
     <!-- /#site_footer -->
 </body>
 </html>
