Add site main adjust

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     </header>
     <!-- /#site_header -->
     <main id="site_main">
+        <!-- products section -->
         <section class="products">
+            <!-- card product -->
             <div class="card_product">
                     <div class="top_cardproduct">
                         <div class="image_product">
@@ -38,6 +40,9 @@
                     </div>
                     <!-- /.bottom_cardproduct -->
             </div>
+            <!-- /card product -->
+
+            <!-- card product -->
             <div class="card_product">
                     <div class="top_cardproduct">
                         <div class="image_product">
@@ -62,6 +67,9 @@
                     </div>
                     <!-- /.bottom_cardproduct -->
             </div>
+            <!-- /card product -->
+
+            <!-- card product -->
             <div class="card_product">
                     <div class="top_cardproduct">
                         <div class="image_product">
@@ -85,8 +93,11 @@
                     </div>
                     <!-- /.bottom_cardproduct -->
             </div>
+            <!-- /card product -->
         </section>
+        <!-- /products section -->
 
+        <!-- products section -->
         <section class="products">
             <div class="card_product">
                     <div class="top_cardproduct">
@@ -157,9 +168,12 @@
                     <!-- /.bottom_cardproduct -->
             </div>
         </section>
+        <!-- /products section -->
+
         
     </main>
     <!-- /#site_main -->
+    
     <footer id="site_footer">
         <p>Made with <span>&hearts;</span> by Antonio Sabella</p>
     </footer>
